# us-pilot-event-templates

./: .gitignore  AUTHORS  README.md  WORKSPACE
.github/workflows/: build-test.yml
src/main/proto/event_templates/: BUILD.bazel  base_demographics_template.proto  event.proto  geo_template.proto  platform_template.proto
src/main/proto/eventtemplates/: base_demographics_template.proto  event.proto  geo_template.proto  platform_template.proto
