load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")

package(
    default_testonly = True,
    default_visibility = ["//visibility:public"],
)

IMPORT_PREFIX = "/src/main/proto"

proto_library(
    name = "event_templates_proto",
    srcs = glob(["*template.proto"]),
    strip_import_prefix = IMPORT_PREFIX,
    deps = [
        "@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:event_annotations_proto",
    ],
)

proto_library(
    name = "event_proto",
    srcs = ["event.proto"],
    strip_import_prefix = IMPORT_PREFIX,
    deps = [":event_templates_proto"],
)
